<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="percent10">10%</string>
    <string name="percent15">15%</string>
    <string name="percent20">20%</string>
    <string name="tip_text">Tip is:</string>
    <string name="bill_amount_hint">Enter Bill Amount</string>
    
</resources>
