<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:ems="10"
        android:hint="@string/bill_amount_hint"
        android:inputType="numberDecimal">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btTip10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBillAmount"
        android:layout_below="@+id/etBillAmount"
        android:layout_marginTop="53dp"
        android:onClick="calculateTip"
        android:text="@string/percent10" />

    <Button
        android:id="@+id/btTip15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btTip10"
        android:layout_toRightOf="@+id/btTip10"
        android:onClick="calculateTip"
        android:text="@string/percent15" />

    <Button
        android:id="@+id/btTip20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btTip15"
        android:layout_alignBottom="@+id/btTip15"
        android:layout_toRightOf="@+id/btTip15"
        android:onClick="calculateTip"
        android:text="@string/percent20" />

    <TextView
        android:id="@+id/tvTipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btTip10"
        android:layout_below="@+id/btTip10"
        android:layout_marginTop="108dp"
        android:text="@string/tip_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipText"
        android:layout_alignBottom="@+id/tvTipText"
        android:layout_alignRight="@+id/btTip20"
        android:layout_toRightOf="@+id/btTip10"
        android:text="$0.00"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
